# package information
[metadata]
name = pynrl1
version = attr: pynrl1.version.__version__
description = L1 NR 3GPP Python implementation
keywords = l1, 3gpp, python, 5g, nr
author = Vladislav Borshch
author_email = borchsh.vn@mail.com
license = MIT
url = https://github.com/vborchsh/pynrl1
project_urls =
    Bug Tracker = https://github.com/vborchsh/pynrl1/issues
    Source Code = https://github.com/vborchsh/pynrl1
download_url = https://github.com/vborchsh/pynrl1/tarball/master
long_description = file: README.md
long-description-content-type = text/markdown
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    numpy >= 1.21.0

[options.extras_require]
test =
    pytest

[options.packages.find]
include = pynrl1.*

# pytest configuration
[tool:pytest]
testpaths =
    tests
addopts =
    --import-mode importlib
